--- a/src/components/navigation component/DropDown/DropDown.css
+++ b/src/components/navigation component/DropDown/DropDown.css
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  border-right: 1px solid #57585B;
+  border-right: 1px solid #57585b;
   align-items: flex-start;
 }
 .dropdownFile_main_middle {
@@ -60,7 +60,7 @@
   margin: 20px 0;
 }
 .dropdownFile_main_right_normal {
-  color: #57585B;
+  color: #57585b;
 }
 .dropdownFile_main_right_download {
   margin: 20px 0;
@@ -77,7 +77,7 @@
 }
 .dropdownFile_under_activity {
   margin: 20px 20px;
-  color: #57585B;
+  color: #57585b;
   font-size: 15px;
   font-weight: 400;
 }
@@ -88,7 +88,7 @@
 .dropdownFile_under_shop {
   font-weight: 600;
   font-size: 15px;
-  color: #57585B;
+  color: #57585b;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -97,7 +97,7 @@
 .textHover {
   font-size: 14px;
   padding: 10px 20px;
-  color: #57585B;
+  color: #57585b;
   text-decoration: none;
   font-weight: 400;
   text-align: center;
