--- a/src/components/product/Carousel.scss
+++ b/src/components/product/Carousel.scss
@@ -1,10 +1,14 @@
 .carousel {
   width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   .thumbnails {
     display: grid;
 
     width: 70%;
-    margin: 0 auto;
+    // margin: 0 auto;
     grid-gap: 20px;
     img {
       width: 100%;
@@ -39,6 +43,19 @@
       width: 100%;
       //   object-position: 50% 0%;
       // object-fit: cover;
+    }
+  }
+  .dots {
+    display: grid;
+    // width: 50%;
+    margin: 0 auto;
+
+    grid-gap: 8px;
+    .dot {
+      width: 8px;
+      height: 8px;
+      border-radius: 20px;
+      background-color: grey;
     }
   }
 }
