--- a/src/components/navigation component/MainNav/fiveListDes.scss
+++ b/src/components/navigation component/MainNav/fiveListDes.scss
@@ -4,7 +4,6 @@
 
 
   &_dropDown {
-    position: relative;
 
     &_menuList {
       display: flex;
@@ -50,8 +49,8 @@
       position: absolute;
       background-color: #f9f9f9;
       box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-      min-width: 990px;
-
+      left: 0;
+      width: 100%;
     }
   }
 
