--- a/src/WhatsNew.scss
+++ b/src/WhatsNew.scss
@@ -24,7 +24,7 @@ $light-grey: #e0e0e0;
   .whats_new .main_right_top {
     display: none;
   }
-  .products {
+  .whats_new .products {
     // border: 1px solid black;
     margin-top: 20px;
     width: 100%;
@@ -34,20 +34,36 @@ $light-grey: #e0e0e0;
   }
 }
 @media (min-width: 992px) {
-  main {
-    display: grid;
-    grid-template-columns: 300px minmax(580px, 1fr);
-    grid-gap: 20px;
-  }
-  .main_right_top {
-    border-bottom: 0.5px solid $light-grey;
-  }
-  .products {
-    // border: 1px solid black;
-    margin-top: 10px;
-    // width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
+  .whats_new {
+    .avoid_jump {
+      margin-top: 116px;
+    }
+    .fix_nav {
+      position: fixed;
+      // margin: 0 auto;
+      top: 0;
+      width: 100%;
+      background-color: white;
+      z-index: 10000;
+      .allLine {
+        display: none;
+      }
+    }
+    main {
+      display: grid;
+      grid-template-columns: 300px minmax(580px, 1fr);
+      grid-gap: 20px;
+    }
+    .main_right_top {
+      border-bottom: 0.5px solid $light-grey;
+    }
+    .products {
+      // border: 1px solid black;
+      margin-top: 10px;
+      // width: 100%;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 20px;
+    }
   }
 }
