close Modal Failed

--- a/src/components/feedback.scss
+++ b/src/components/feedback.scss
@@ -15,7 +15,7 @@
   border-color: #dedede;
   border-style: solid;
   text-align: left;
-  //height: 816.5px;
+  height: 816.5px;
   width: 438px;
   //width: 25%;
 
