--- a/src/components/review/reviewTopLine/topReview.css
+++ b/src/components/review/reviewTopLine/topReview.css
@@ -1,63 +1,77 @@
 .topLineReview {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
 }
-
 .topLineReview_text {
-    font-size: 55px;
-    font-weight: bold;
+  font-size: 55px;
+  font-weight: bold;
 }
-
 .topLineReview_rating {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: flex-start;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: flex-start;
 }
-
 .topLineReview_rating_first {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
 }
-
 .topLineReview_rating_first_text {
-    font-size: 30px;
-    font-weight: 600;
+  font-size: 30px;
+  font-weight: 600;
 }
-
+.topLineReview_rating_first_star {
+  display: flex;
+}
 .topLineReview_rating_second {
-    font-size: 14px;
-    font-weight: 300;
+  font-size: 14px;
+  font-weight: 300;
 }
-
 .topLineReview_size {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.topLineReview_size_text {
+  font-size: 30px;
+  font-weight: 500;
+}
+.topLineReview_size_sizeRating {
+  display: flex;
+  flex-direction: row;
+}
+.topLineReview_size_sizeRating_text {
+  font-size: 14px;
+  font-weight: 300;
+}
+.topLineReview_size_sizeRating_lineForSize {
+  display: flex;
+  flex-direction: row;
+}
+@media screen and (max-width: 990px) {
+  .topLineReview {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    margin-left: 10px;
+  }
 }
-
-.topLineReview_size_text {
-    font-size: 30px;
-    font-weight: 500;
+@media screen and (max-width: 990px) {
+  .topLineReview_text,
+  .topLineReview_rating,
+  .topLineReview_size {
+    margin-bottom: 10px;
+  }
 }
-
-.topLineReview_size_sizeRating {
-    display: flex;
-    flex-direction: row;
-}
-
-.topLineReview_size_sizeRating_text {
-    font-size: 14px;
-    font-weight: 300;
-}
-
-.topLineReview_size_sizeRating_lineForSize {
-    display: flex;
-    flex-direction: row;
+@media screen and (max-width: 990px) {
+  .WriteReview {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=topReview.css.map */
