--- a/src/components/review/reviewTopLine/topReview.scss
+++ b/src/components/review/reviewTopLine/topReview.scss
@@ -77,7 +77,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-
+    margin-left: 10px;
   }
 }
 
@@ -86,7 +86,7 @@
   .topLineReview_text,
   .topLineReview_rating,
   .topLineReview_size {
-    margin: 5px;
+    margin-bottom: 10px;
   }
 }
 
