--- a/src/components/review/reviewTopLine/topReview.css
+++ b/src/components/review/reviewTopLine/topReview.css
@@ -2,8 +2,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  max-width: 1200px;
-  margin: 0 auto;
 }
 .topLineReview_text {
   font-size: 55px;
@@ -57,8 +55,7 @@
   .topLineReview {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    margin-left: 10px;
+    margin: 0 20px;
   }
 }
 @media screen and (max-width: 990px) {
@@ -66,11 +63,6 @@
   .topLineReview_rating,
   .topLineReview_size {
     margin-bottom: 10px;
-  }
-}
-@media screen and (max-width: 990px) {
-  .WriteReview {
-    width: 100%;
   }
 }
 
