--- a/src/components/review/reviewTopLine/topReview.scss
+++ b/src/components/review/reviewTopLine/topReview.scss
@@ -2,8 +2,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  max-width: 1200px;
-  margin: 0 auto;
 
 
   &_text {
@@ -76,8 +74,7 @@
   .topLineReview {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    margin-left: 10px;
+    margin: 0 20px;
   }
 }
 
@@ -90,8 +87,4 @@
   }
 }
 
-@media screen and (max-width: 990px) {
-  .WriteReview {
-    width: 100%;
-  }
-}
+
