--- a/src/components/navigation component/MainNav/inputInfor.scss
+++ b/src/components/navigation component/MainNav/inputInfor.scss
@@ -1,6 +1,6 @@
 .searchBar {
   z-index: 2;
-  width: 100%;
+  width: 250px;
   .search_form {
     display: flex;
     align-items: center;
@@ -21,6 +21,7 @@
 
     .search_input {
       //width: 250px;
+      width: 100%;
       height: 50px;
       border: none;
       box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
@@ -48,10 +49,13 @@
 }
 
 @media screen and (max-width: 990px) {
-  form {
+  .searchBar {
     width: 100%;
-    input {
+    form {
       width: 100%;
+      input {
+        width: 100%;
+      }
     }
   }
 }
