--- a/src/components/review/reviewTopLine/topReview.scss
+++ b/src/components/review/reviewTopLine/topReview.scss
@@ -42,7 +42,7 @@
   &_size {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
 
     &_text {
       font-size: 30px;
