--- a/src/components/navigation component/MainNav/inputInfor.scss
+++ b/src/components/navigation component/MainNav/inputInfor.scss
@@ -13,10 +13,6 @@
       left: 10px;
       width: 20px;
       z-index: 2;
-
-      :hover {
-        cursor: pointer;
-      }
     }
 
     .search_input {
@@ -40,10 +36,6 @@
       position: absolute;
       right: 5px;
       z-index: 2;
-
-      :hover {
-        cursor: pointer;
-      }
     }
   }
 }
@@ -57,5 +49,8 @@
         width: 100%;
       }
     }
+  }
+  .searchBar:hover {
+    cursor: pointer;
   }
 }
