--- a/src/components/productPreview/OneProduct.scss
+++ b/src/components/productPreview/OneProduct.scss
@@ -1,5 +1,8 @@
 $color-checkbox: rgb(222, 217, 217);
 .product {
+  svg {
+    color: black;
+  }
   //   width: 100%;
   animation-name: show_one_product;
   animation-duration: 1000ms;
@@ -8,7 +11,14 @@ $color-checkbox: rgb(222, 217, 217);
     pointer-events: none;
     opacity: 0.3;
   }
-
+  * {
+    text-decoration: none;
+  }
+  h3,
+  p {
+    text-decoration: none !important;
+    color: black;
+  }
   .color-checkbox {
     div {
       margin: 0 auto;
