--- a/src/components/product/ProductPage.scss
+++ b/src/components/product/ProductPage.scss
@@ -3,6 +3,8 @@ $dark-grey: rgb(202, 202, 202);
 $red: #d31334;
 .product_page {
   background-color: $light-grey;
+  display: grid;
+  grid-template-columns: 4fr 3fr;
   .search_link {
     display: flex;
     color: $dark-grey;
@@ -70,74 +72,11 @@ $red: #d31334;
       }
     }
   }
-  display: grid;
-  grid-template-columns: 1fr 1fr;
 
   &_right {
+    height: max-content;
     padding: 10px 40px;
-    .add_to_bag {
-      border: 1px $dark-grey solid;
-      border-radius: 5px;
-      h1 {
-        font-size: 25px;
-        font-weight: 600;
-      }
-      h3 {
-        color: grey;
-        font-weight: 400;
-      }
-      .in_store {
-        padding: 10px;
-        border-top: 1px solid $dark-grey;
-        p {
-          padding: 10px;
-          margin-top: 0;
-        }
-        &_title {
-          // border-bottom: 1px solid $dark-grey;
-          padding: 10px;
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          h1 svg {
-            transform: scale(0.7);
-            position: relative;
-            top: 5px;
-            margin-right: 5px;
-            margin-left: -15px;
-          }
-        }
-      }
-      .ship {
-        padding: 10px;
-        display: flex;
-        background-color: white;
-        svg {
-          transform: scale(1.3);
-          color: $red;
-          position: relative;
-          top: 10px;
-          margin-right: 10px;
-        }
-      }
-      button {
-        letter-spacing: 1px;
-        font-weight: 700;
-        border: none;
-        border-radius: 5px;
-        width: 100%;
-        background-color: $red;
-        color: white;
-        height: 60px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      button:hover {
-        cursor: pointer;
-        filter: grayscale(0.2);
-      }
-    }
+
     .color {
       display: grid;
       grid-template-columns: repeat(8, 36px);
@@ -204,8 +143,111 @@ $red: #d31334;
         color: white;
       }
     }
+    .add_to_bag {
+      background-color: white;
+      margin-top: 20px;
+      border: 1px $dark-grey solid;
+      border-radius: 5px;
+      h1 {
+        font-size: 25px;
+        font-weight: 600;
+      }
+      h3 {
+        color: grey;
+        font-weight: 400;
+      }
+      .in_store {
+        background-color: $light-grey;
+        padding: 10px;
+        border-top: 1px solid $dark-grey;
+        display: flex;
+        &_left {
+          width: 14px;
+          svg {
+            transform: scale(0.7);
+            margin-left: -4px;
+            position: relative;
+            top: 15px;
+          }
+        }
+        &_right {
+          width: 100%;
+          padding-right: 10px;
+          p {
+            padding: 10px;
+            margin-top: 0;
+            font-size: 16px;
+          }
+          &_title {
+            // border-bottom: 1px solid $dark-grey;
+            display: flex;
+            width: 100%;
+            padding: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+          }
+        }
+      }
+      .ship {
+        padding: 10px;
+        display: flex;
+        // background-color: white;
+        svg {
+          transform: scale(1.3);
+          color: $red;
+          position: relative;
+          top: 10px;
+          margin-right: 10px;
+        }
+      }
+      .button {
+        padding: 10px;
+        // background-color: white;
+        border-top: 1px solid $dark-grey;
+        button {
+          letter-spacing: 1px;
+          font-weight: 700;
+          border: none;
+          border-radius: 5px;
+          width: 100%;
+          background-color: $red;
+          color: white;
+          height: 60px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+        button:hover {
+          cursor: pointer;
+          filter: grayscale(0.2);
+        }
+      }
+    }
+    .details {
+      margin-top: 20px;
+      h3 {
+        font-size: 20px;
+      }
+      li {
+        list-style: none;
+        display: flex;
+        align-items: center;
+        h2 {
+          margin-left: 10px;
+          border-bottom: 1px solid $dark-grey;
+        }
+        h2:hover {
+          cursor: pointer;
+          border-bottom: 1px solid $red;
+        }
+      }
+    }
   }
   &_left {
+    padding-top: 0px;
+    height: max-content;
+    // border: 1px solid black;
     &_top {
       padding: 30px 0;
     }
