--- a/src/components/product/ProductPage.scss
+++ b/src/components/product/ProductPage.scss
@@ -1,6 +1,15 @@
 $light-grey: #fafafa;
 $dark-grey: rgb(202, 202, 202);
 $red: #d31334;
+.topChoice {
+  height: 50px;
+  position: fixed;
+  top: 0;
+  background-color: white;
+  width: 100%;
+  z-index: 999;
+}
+
 .product_page {
   background-color: $light-grey;
   display: grid;
@@ -75,7 +84,7 @@ $red: #d31334;
 
   &_right {
     height: max-content;
-    padding: 10px 40px;
+    padding: 10px 40px 0;
 
     .color {
       display: grid;
