--- a/src/components/product/FeaturePanels.scss
+++ b/src/components/product/FeaturePanels.scss
@@ -53,6 +53,10 @@ $red: #d31334;
       ul {
         grid-template-columns: repeat(2, 1fr);
       }
+      h1 {
+        font-size: 25px;
+        font-weight: 500;
+      }
     }
   }
 }
