--- a/src/components/feedback.scss
+++ b/src/components/feedback.scss
@@ -9,6 +9,7 @@
 
 .feedback {
   //align-content: center;
+  //background: #dedede;
   margin: auto;
   position: relative;
   padding: 20px 20px;
@@ -95,23 +96,36 @@
     visibility: hidden;
   }
 
-  .numbers {
+//  .recommendation{
+//    display: flex;
+//    flex-direction: column;
+//}
+
+
+
+  .number-buttons {
     //position: relative;
     display: flex;
     justify-content: space-evenly;
     flex-direction: row;
     box-sizing: border-box;
     line-height: normal;
-    margin: 10px 40px 10px -40px;
+    margin: 10px 40px 30px -10px;
     padding: 0;
   }
 ;
 
-  .numbersBtn:hover {
+  .number-button:hover {
     cursor: pointer;
     background-color: #595959;
+    color: white;
   }
 ;
+
+  .number-button .selected {
+    background-color: #1e1e1e;
+    color: #595959;
+  }
 
   //.numbers button {
   //  font-size: 50%;
