--- a/src/app.scss
+++ b/src/app.scss
@@ -8,4 +8,12 @@ body {
     margin: 0 auto;
     padding: 0 30px;
   }
+  .sticky {
+    position: -webkit-sticky;
+    position: -moz-sticky;
+    position: -ms-sticky;
+    position: -o-sticky;
+    position: sticky;
+    top: 0;
+  }
 }
