--- a/src/components/review/review.scss
+++ b/src/components/review/review.scss
@@ -1,4 +1,9 @@
 .review {
   margin: 0 auto;
   max-width: 1200px;
+  &_header {
+    height: 100px;
+    display: flex;
+    align-items: center;
+  }
 }
