--- a/src/app.css
+++ b/src/app.css
@@ -7,7 +7,15 @@ body {
 body .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0 30px;
+}
+body .sticky {
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -ms-sticky;
+  position: -o-sticky;
+  position: sticky;
+  top: 0;
 }
 
 /*# sourceMappingURL=app.css.map */
