--- a/src/components/product/ProductPage.scss
+++ b/src/components/product/ProductPage.scss
@@ -185,35 +185,58 @@ $red: #d31334;
         border-color: black;
       }
     }
-    .size {
-      display: grid;
-      grid-template-columns: repeat(10, 40px);
-      grid-gap: 10px;
-      div {
-        width: 40px;
-        border: 1px solid $dark-grey;
-        aspect-ratio: 1/1;
-        border-radius: 5px;
+    .sizes {
+      .warn {
+        border: 1px solid $red;
+        margin-top: 20px;
         display: flex;
         align-items: center;
-        justify-content: center;
-
+        justify-content: left;
+        height: 50px;
+        padding-left: 10px;
+        background-color: #fae8ea;
         p {
-          font-size: 20px;
-          font-weight: 400;
-          padding: 0;
           margin: 0;
+          padding: 0;
+        }
+        svg {
+          color: $red;
+          transform: scale(1.3);
           position: relative;
-          top: 4px;
+          top: 3px;
+          margin-right: 5px;
         }
       }
-      div:hover {
-        cursor: pointer;
-        border-color: black;
-      }
-      .chosen {
-        background-color: black;
-        color: white;
+      .size {
+        display: grid;
+        grid-template-columns: repeat(10, 40px);
+        grid-gap: 10px;
+        div {
+          width: 40px;
+          border: 1px solid $dark-grey;
+          aspect-ratio: 1/1;
+          border-radius: 5px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          p {
+            font-size: 20px;
+            font-weight: 400;
+            padding: 0;
+            margin: 0;
+            position: relative;
+            top: 4px;
+          }
+        }
+        div:hover {
+          cursor: pointer;
+          border-color: black;
+        }
+        .chosen {
+          background-color: black;
+          color: white;
+        }
       }
     }
     .add_to_bag {
