--- a/src/components/product/ProductPage.scss
+++ b/src/components/product/ProductPage.scss
@@ -75,9 +75,13 @@ $red: #d31334;
 }
 
 .product_page {
+  width: 100%;
+  // border: 1px solid black;
   background-color: $light-grey;
   display: grid;
-  grid-template-columns: 4fr 3fr;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  margin-bottom: 100px;
   .search_link {
     display: flex;
     color: $dark-grey;
@@ -148,16 +152,22 @@ $red: #d31334;
 
   &_right {
     height: max-content;
-    padding: 10px 40px 0;
-
+    // padding: 10px;
+    // border: 1px solid black;
+    width: 100%;
     .color {
       display: grid;
-      grid-template-columns: repeat(8, 36px);
+      grid-template-columns: repeat(auto-fill, minmax(36px, 1fr));
       grid-gap: 10px;
+      // display: flex;
+      // flex-wrap: wrap;
+      width: 100%;
       div {
         box-sizing: border-box;
         width: 36px;
         height: 36px;
+        margin-right: 10px;
+        margin-bottom: 10px;
         border-radius: 30px;
         border: 1.5px $dark-grey solid;
         content: "";
@@ -186,6 +196,7 @@ $red: #d31334;
       }
     }
     .sizes {
+      width: 100%;
       .warn {
         border: 1px solid $red;
         margin-top: 20px;
@@ -209,10 +220,13 @@ $red: #d31334;
       }
       .size {
         display: grid;
-        grid-template-columns: repeat(10, 40px);
+        grid-template-columns: repeat(auto-fill, minmax(43px, 1fr));
         grid-gap: 10px;
+        width: 100%;
         div {
           width: 40px;
+          margin-right: 10px;
+          margin-bottom: 10px;
           border: 1px solid $dark-grey;
           aspect-ratio: 1/1;
           border-radius: 5px;
@@ -240,6 +254,7 @@ $red: #d31334;
       }
     }
     .add_to_bag {
+      width: 100%;
       background-color: white;
       margin-top: 20px;
       border: 1px $dark-grey solid;
@@ -343,6 +358,7 @@ $red: #d31334;
   &_left {
     padding-top: 0px;
     height: max-content;
+    width: 100%;
     // border: 1px solid black;
     &_top {
       padding: 30px 0;
@@ -359,7 +375,7 @@ $red: #d31334;
     grid-template-columns: 1fr;
 
     &_right {
-      padding: 10px;
+      // padding: 10px;
       .size {
         display: flex;
         flex-wrap: wrap;
