--- a/src/components/feedback.scss
+++ b/src/components/feedback.scss
@@ -7,6 +7,16 @@
 //
 //}
 
+.modalBackground{
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(250, 250, 250);
+  //position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #popup {
   cursor: pointer;
   height: 40px;
@@ -31,12 +41,14 @@
   margin: auto;
   position: relative;
   padding: 20px 20px;
-  border-color: #dedede;
+  border-color: #ececec;
   border-style: solid;
+  background-color: white;
   text-align: left;
-  height: 816.5px;
-  width: 438px;
-  //width: 25%;
+  //height: 816.5px;
+  //width: 438px;
+  width: 30vw;
+  height: 100vh;
 
   .feedbackModal, .overlay {
     width: 100vw;
