--- a/src/components/feedback.scss
+++ b/src/components/feedback.scss
@@ -44,6 +44,8 @@
   border-color: #ececec;
   border-style: solid;
   background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 5px 5px;
+display: flex;
   text-align: left;
   //height: 816.5px;
   //width: 438px;
