--- a/src/components/product/CartAdded.scss
+++ b/src/components/product/CartAdded.scss
@@ -11,8 +11,8 @@
   width: 100vw;
 
   &_front {
-    width: 500px;
-    height: 500px;
+    width: 70%;
+
     background-color: white;
     z-index: 1001;
   }
