--- a/src/components/edit/edit.scss
+++ b/src/components/edit/edit.scss
@@ -41,7 +41,6 @@ button:hover {
 }
 
 
-
 .viewDetail {
   display: flex;
   justify-content: center;
@@ -75,4 +74,49 @@ button:hover {
 .sizeChose {
   background-color: black;
   color: white;
+}
+
+.colorCircle {
+  cursor: pointer;
+  position: relative;
+}
+
+.colorCircle::after {
+  box-sizing: border-box;
+  content: "";
+  display: block;
+  border: 1.5px solid white;
+  width: 34px;
+  height: 34px;
+  border-radius: 30px;
+  margin: -3.5px 0 -0 -4px;
+}
+
+.colorCircle::after:hover {
+  display: inline-block;
+  border: 1.5px solid #6e6e80;
+}
+
+
+.img {
+  max-width: 100%;
+}
+
+.rightArrow{
+  position: absolute;
+  top: 50%;
+  right: 32px;
+  font-size: 3rem;
+  z-index: 10;
+  user-select: none;
+}
+
+
+.leftArrow{
+  position: absolute;
+  top: 50%;
+  left: 32px;
+  font-size: 3rem;
+  z-index: 10;
+  user-select: none;
 }
