--- a/src/components/cart/CartItemDesktop.scss
+++ b/src/components/cart/CartItemDesktop.scss
@@ -3,42 +3,139 @@ $dark-grey: rgb(202, 202, 202);
 $red: #d31334;
 
 .cart_item_desktop {
-  position: relative;
-  z-index: 100;
-  border-bottom: 1px solid $dark-grey;
-  padding: 0 20px 20px;
-  height: 300px;
-  overflow-y: auto;
-
   .item {
+    padding: 20px 0;
     display: flex;
-    margin-top: 25px;
     img {
       display: block;
-      width: 80px;
-      height: 100px;
+      width: 200px;
+
       object-fit: cover;
-      border-radius: 5px;
     }
+
     &_detail {
       width: 100%;
-      margin-left: 15px;
+      margin-left: 20px;
       padding: 5px 0 0;
-      h3,
-      div {
-        display: flex;
-        justify-content: space-between;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      .top {
+        & > div {
+          display: grid;
+          grid-template-columns: 3fr 1fr 1fr 1fr;
+          grid-gap: 20px;
+
+          div {
+            text-align: right;
+            width: 100%;
+            p {
+              margin-bottom: 20px;
+            }
+          }
+          div:nth-child(1) {
+            text-align: left;
+          }
+        }
+        .quantity_dropdown {
+          position: relative;
+          &_arrow {
+            display: flex;
+            border: 1px solid black;
+            border-radius: 5px;
+            width: 100%;
+            box-sizing: border-box;
+
+            align-items: center;
+            justify-content: space-between;
+            padding: 15px 20px;
+            margin-top: -15px;
+          }
+
+          &_option {
+            border: 1px solid black;
+            position: absolute;
+            width: 100%;
+            box-sizing: border-box;
+            text-align: center;
+            height: 300px;
+            overflow-y: scroll;
+            left: 0;
+            background-color: white;
+            border-radius: 5px;
+            margin-top: 5px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
+            z-index: 100;
+            p {
+              padding: 10px;
+              box-sizing: border-box;
+              // border: 1px solid black;
+              margin: 0 !important;
+              padding: 20px;
+              transition: all ease-in-out 200ms;
+              border-bottom: 1px solid;
+              border-image: linear-gradient(
+                  to right,
+                  transparent 25%,
+                  #000 26%,
+                  #000 75%,
+                  transparent 25%
+                )
+                100% 1;
+            }
+            p:last-child {
+              border-bottom: none;
+            }
+            p:hover {
+              animation: grey_shadow linear 300ms forwards;
+            }
+          }
+          svg {
+            transition: all ease-in-out 200ms;
+          }
+          .arrow {
+            transform: rotate(180deg);
+          }
+          p {
+            margin: 0;
+            margin-top: 5px;
+          }
+        }
       }
+
       h3 {
         font-weight: 500;
-        font-size: 18px;
+        font-size: 25px;
         svg:hover {
           cursor: pointer;
         }
       }
       p {
         margin-top: 5px;
-        font-size: 18px;
+        font-size: 20px;
+      }
+      .bottom {
+        display: flex;
+        justify-content: space-between;
+        div {
+          display: flex;
+          justify-content: space-between;
+          p {
+            text-decoration: underline;
+            text-decoration-thickness: 1px;
+            text-decoration-color: $dark-grey;
+            text-underline-offset: 5px;
+            padding: 2px 0 0 15px;
+          }
+          p:hover {
+            cursor: pointer;
+          }
+          p:nth-child(1) {
+            border-right: 1px solid $dark-grey;
+            padding-right: 15px;
+          }
+        }
       }
     }
   }
@@ -69,3 +166,11 @@ $red: #d31334;
 //   z-index: 90;
 //   position: absolute;
 // }
+@keyframes grey_shadow {
+  0% {
+    background-image: radial-gradient($dark_grey, white);
+  }
+  100% {
+    background-image: radial-gradient($dark_grey, $dark_grey);
+  }
+}
