--- a/src/components/cart/CartItemDesktop.scss
+++ b/src/components/cart/CartItemDesktop.scss
@@ -1,11 +1,13 @@
 $light-grey: #fafafa;
-$dark-grey: rgb(202, 202, 202);
+$dark-grey: rgb(223, 223, 223);
 $red: #d31334;
 
 .cart_item_desktop {
   .item {
-    padding: 20px 0;
+    padding: 30px 0;
     display: flex;
+    border-bottom: 1px solid rgba(202, 202, 202, 0.3);
+    // margin-bottom: 20px;
     img {
       display: block;
       width: 200px;
