--- a/src/components/review/review.css
+++ b/src/components/review/review.css
@@ -2,5 +2,10 @@
   margin: 0 auto;
   max-width: 1200px;
 }
+.review_header {
+  height: 100px;
+  display: flex;
+  align-items: center;
+}
 
 /*# sourceMappingURL=review.css.map */
