--- a/src/components/footer/firstLine/boxes.scss
+++ b/src/components/footer/firstLine/boxes.scss
@@ -49,11 +49,12 @@
   color: #57585B;
   position: relative;
   width: fit-content;
+  cursor: pointer;
 
   &::before {
     content: "";
     position: absolute;
-    bottom: 5px;
+    bottom: 7px;
     left: 0;
     width: 0;
     height: 2px;
