--- a/src/components/footer/secondLine/secondLine.scss
+++ b/src/components/footer/secondLine/secondLine.scss
@@ -14,6 +14,7 @@
     line-height: 20px;
     position: relative;
     width: fit-content;
+    cursor: pointer;
 
     &::before {
       content: "";
@@ -45,6 +46,7 @@
       line-height: 20px;
       position: relative;
       width: fit-content;
+      cursor: pointer;
 
       &::before {
         content: "";
