--- a/src/components/review/review.css
+++ b/src/components/review/review.css
@@ -3,9 +3,9 @@
   max-width: 1200px;
 }
 .review_header {
-  height: 100px;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 /*# sourceMappingURL=review.css.map */
