--- a/src/components/review/review.scss
+++ b/src/components/review/review.scss
@@ -1,9 +1,10 @@
 .review {
   margin: 0 auto;
   max-width: 1200px;
+
   &_header {
-    height: 100px;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start
   }
 }
