--- a/src/components/review/review.scss
+++ b/src/components/review/review.scss
@@ -1,10 +1,9 @@
 .review {
   margin: 0 auto;
   max-width: 1200px;
-
   &_header {
+    height: 100px;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start
+    align-items: center;
   }
 }
