--- a/src/components/sort/SortDesktop.scss
+++ b/src/components/sort/SortDesktop.scss
@@ -1,4 +1,13 @@
 $light-grey: #e6e6e6;
+.pop-window-back {
+  z-index: 99;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  //   background-color: rgba(120, 60, 60, 0.194);
+}
 .sort-desktop {
   font-family: calibre;
   width: 100%;
